Add meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Meta tags for SEO -->
+    <meta
+      name="description"
+      content="M-Buildz is an Irish Drift Car builder, specializing in custom built cars"
+    />
+    <meta name="keywords" content="m-buildz, drift, cars, drifting, ireland" />
     <title>M-Buildz</title>
   </head>
   <body></body>
