Add CSS Stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <meta name="keywords" content="m-buildz, drift, cars, drifting, ireland" />
     <title>M-Buildz</title>
+    <!-- Link to CSS Stylesheet -->
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
   </head>
   <body></body>
 </html>
