Add page title comment

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       content="M-Buildz is an Irish Drift Car builder, specializing in custom built cars"
     />
     <meta name="keywords" content="m-buildz, drift, cars, drifting, ireland" />
+    <!-- Page Title -->
     <title>M-Buildz</title>
     <!-- Link to CSS Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
