--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <title>M-Buildz</title>
     <!-- Link to CSS Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+    <!-- Font Awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/748966ddba.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body></body>
 </html>
