Add header, main, and footer sections to index.html

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Header Section-->
+    <header></header>
+    <!-- Main Section -->
+    <main></main>
+    <!-- Footer Section-->
+    <footer></footer>
+  </body>
 </html>
