Update meta tags and page title in index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       content="M-Buildz is an Irish Drift Car builder, specializing in custom built cars"
     />
     <meta name="keywords" content="m-buildz, drift, cars, drifting, ireland" />
-    <!-- Page Title -->
-    <title>M-Buildz</title>
+    <meta name="author" content="M-Buildz" />
     <!-- Link to CSS Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
     <!-- Font Awesome kit -->
@@ -20,6 +19,8 @@
       src="https://kit.fontawesome.com/748966ddba.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Page Title -->
+    <title>M-Buildz</title>
   </head>
   <body>
     <!-- Header Section-->
