Add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       src="https://kit.fontawesome.com/748966ddba.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="icon/ico"
+      sizes="32x32"
+      href="./assets/icons/favicon/favicon.ico"
+    />
     <!-- Page Title -->
     <title>M-Buildz</title>
   </head>
