--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       name="description"
       content="M-Buildz is an Irish Drift Car builder, specializing in custom built cars"
     />
-    <meta name="keywords" content="m-buildz, drift, cars, drifting, ireland" />
+    <meta
+      name="keywords"
+      content="m-buildz, drift, drifting, car, cars, parts, scrap, salvage, ireland,"
+    />
     <meta name="author" content="M-Buildz" />
     <!-- Link to CSS Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
