Add logo to header section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
   </head>
   <body>
     <!-- Header Section-->
-    <header></header>
+    <header class="page-header">
+      <!-- Logo -->
+      <figure class="page-logo">
+        <a href="index.html">
+          <img
+            srcset="
+              ./assets/logos/m-buildz-logo-100px-0comp.webp 100w,
+              ./assets/logos/m-buildz-logo-200px-0comp.webp 200w
+            "
+            alt="M-Buildz Logo"
+            title="M-Buildz Logo"
+            id="logo"
+          />
+        </a>
+      </figure>
+    </header>
     <!-- Main Section -->
     <main></main>
     <!-- Footer Section-->
