Add width attribute to logo image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             alt="M-Buildz Logo"
             title="M-Buildz Logo"
             id="logo"
+            width="200"
           />
         </a>
       </figure>
