Add mobile menu button to page header

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           />
         </a>
       </figure>
+      <!-- Button for Menu on mobile -->
+      <input type="checkbox" id="nav-toggle-box" name="nav-toggle-box" />
+      <label for="nav-toggle-box" class="nav-toggle-box-label">
+        <i class="fa-solid fa-bars"></i>
+      </label>
     </header>
     <!-- Main Section -->
     <main></main>
