--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
       <figure class="page-logo">
         <a href="index.html">
           <img
-            srcset="
-              ./assets/logos/m-buildz-logo-100px-0comp.webp 100w,
-              ./assets/logos/m-buildz-logo-200px-0comp.webp 200w
-            "
+            src="./assets/logos/m-buildz-logo-200px-0comp.webp"
             alt="M-Buildz Logo"
             title="M-Buildz Logo"
             id="logo"
-            width="200"
           />
         </a>
       </figure>
