Update page header comment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <title>M-Buildz</title>
   </head>
   <body>
-    <!-- Header Section-->
+    <!-- Page Header -->
     <header class="page-header">
       <!-- Logo -->
       <figure class="page-logo">
