Add navigation menu to index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       <label for="nav-toggle-box" class="nav-toggle-box-label">
         <i class="fa-solid fa-bars"></i>
       </label>
+      <!-- Navigation Menu -->
+      <nav>
+        <ul id="menu">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Cars</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
     <!-- Main Section -->
     <main></main>
