--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <i class="fa-solid fa-bars"></i>
       </label>
       <!-- Navigation Menu -->
-      <nav>
+      <nav id="navigation-menu">
         <ul id="menu">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Cars</a></li>
