Add hero section to main

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
       </nav>
     </header>
     <!-- Main Section -->
-    <main></main>
+    <main>
+      <section id="hero-section">
+        <header id="slogan">
+          <h1>We build cars<br />that <span>drift</span></h1>
+        </header>
+      </section>
+    </main>
     <!-- Footer Section-->
     <footer></footer>
   </body>
