Add social media links and copyright information to footer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,52 @@
       </section>
     </main>
     <!-- Footer Section-->
-    <footer></footer>
+    <footer>
+      <ul id="socials">
+        <li>
+          <a
+            href="https://www.tiktok.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Check us out on Tiktok (opens in a new tab)"
+          >
+            <i class="fa-brands fa-tiktok"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.x.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Check us out on X (opens in a new tab)"
+          >
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Check us out on Instagram (opens in a new tab)"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.snapchat.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Check us out on Snapchat (opens in a new tab)"
+          >
+            <i class="fa-brands fa-snapchat"></i
+          ></a>
+        </li>
+      </ul>
+      <p id="copyright">
+        <i class="fa-regular fa-copyright"></i> COPYRIGHT M-BUILDZ 2024
+      </p>
+    </footer>
   </body>
 </html>
