Update copyright in index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </li>
       </ul>
       <p id="copyright">
-        <i class="fa-regular fa-copyright"></i> COPYRIGHT M-BUILDZ 2024
+        <i class="fa-regular fa-copyright"></i> M-BUILDZ 2024
       </p>
     </footer>
   </body>
