Add Cars section initial structure to index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
           <h1>We build cars<br />that <span>drift</span></h1>
         </header>
       </section>
+      <section id="cars">
+        <header class="hidden-header">
+          <h2>Cars</h2>
+          <div id="card-wrapper">
+            <article class="card"></article>
+          </div>
+        </header>
+      </section>
     </main>
     <!-- Footer Section-->
     <footer>
