Add initial structure of contact section to index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <!-- Main Section -->
     <main>
-      <section id="hero-section">
+      <section id="hero-section" class="section-wrapper">
         <header id="slogan">
           <h1>We build cars<br />that <span>drift</span></h1>
         </header>
@@ -74,6 +74,14 @@
             <article class="card"></article>
           </div>
         </header>
+      </section>
+      <section id="contact-us" class="section-wrapper">
+        <header class="hidden-header">
+          <h2>Contact Us</h2>
+        </header>
+        <article id="contact-form" class="article-wrapper"></article>
+        <article id="contact-information" class="article-wrapper"></article>
+        <article id="google-map" class="article-wrapper"></article>
       </section>
     </main>
     <!-- Footer Section-->
