Update navigation menu links

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <!-- Navigation Menu -->
       <nav id="navigation-menu">
         <ul id="menu">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Cars</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li class="active"><a href="#hero-section">Home</a></li>
+          <li><a href="#cars">Cars</a></li>
+          <li><a href="#contact-us">Contact Us</a></li>
         </ul>
       </nav>
     </header>
