Add styles to contact form inputs

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
         </header>
       </section>
-      <section id="contact-us" class="section-wrapper">
+      <section id="contact-us-wrapper" class="section-wrapper">
         <header class="hidden-header">
           <h2>Contact Us</h2>
         </header>
