Add hidden header to contact form

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           <h2>Contact Us</h2>
         </header>
         <article id="contact-form" class="article-wrapper">
+          <header class="hidden-header">
+            <h3>Contact Form</h3>
+          </header>
           <form
             id="contact-us-form"
             name="contact-us-form"
