--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
       </section>
       <section id="cars">
-        <header class="hidden-header">
+        <header class="hidden">
           <h2>Cars</h2>
           <div id="card-wrapper">
             <article class="card"></article>
@@ -76,11 +76,11 @@
         </header>
       </section>
       <section id="contact-us-wrapper" class="section-wrapper">
-        <header class="hidden-header">
+        <header>
           <h2>Contact Us</h2>
         </header>
         <article id="contact-form" class="article-wrapper">
-          <header class="hidden-header">
+          <header class="hidden">
             <h3>Contact Form</h3>
           </header>
           <form
@@ -89,7 +89,7 @@
             action="https://formdump.codeinstitute.net"
             method="post"
           >
-            <label for="name">Name</label>
+            <label for="name" class="hidden">Name</label>
             <input
               class="text-input"
               id="name"
@@ -98,7 +98,7 @@
               required
               placeholder="Name"
             />
-            <label for="email">Email Address</label>
+            <label for="email" class="hidden">Email Address</label>
             <input
               class="text-input"
               id="email"
@@ -107,7 +107,7 @@
               required
               placeholder="Email Address"
             />
-            <label for="question">Question</label>
+            <label for="question" class="hidden">Question</label>
             <textarea
               class="question-input"
               id="question"
