Add autocomplete attribute to input fields

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               type="text"
               required
               placeholder="Name"
+              autocomplete="on"
             />
             <label for="email" class="hidden">Email Address</label>
             <input
@@ -106,6 +107,7 @@
               type="text"
               required
               placeholder="Email Address"
+              autocomplete="on"
             />
             <label for="question" class="hidden">Question</label>
             <textarea
