Add inital contact information  section structure to index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,14 @@
             <input class="submit" type="submit" value="Send it!" />
           </form>
         </article>
-        <article id="contact-information" class="article-wrapper"></article>
+        <article id="contact-information" class="article-wrapper">
+          <header>
+            <h4>Contact Information</h4>
+          </header>
+          <div id="address"></div>
+          <div id="email-and-number"></div>
+          <div id="opening-hours"></div>
+        </article>
         <article id="google-map" class="article-wrapper"></article>
       </section>
     </main>
