Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -124,9 +124,29 @@
           <header>
             <h4>Contact Information</h4>
           </header>
-          <div id="address"></div>
-          <div id="email-and-number"></div>
-          <div id="opening-hours"></div>
+          <div id="address">
+            <h5>
+              <span><i class="fa-solid fa-location-dot"></i></span>Address
+            </h5>
+            <address>
+              16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
+            </address>
+          </div>
+          <div id="email-and-number">
+            <h5>
+              <span><i class="fa-solid fa-envelope"></i></span>Email Address
+            </h5>
+            <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
+            <h5>
+              <span><i class="fa-solid fa-phone"></i></span>Phone Number
+            </h5>
+            <a href="tel:+353831437489">+353831437489</a>
+          </div>
+          <div id="opening-hours">
+            <h5>
+              <span><i class="fa-regular fa-clock"></i></span>Opening Hours
+            </h5>
+          </div>
         </article>
         <article id="google-map" class="article-wrapper"></article>
       </section>
