Refactor contact section in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -75,80 +75,82 @@
           </div>
         </header>
       </section>
-      <section id="contact-us-wrapper" class="section-wrapper">
+      <section id="contact-us" class="section-outer-wrapper">
         <header>
           <h2>Contact Us</h2>
         </header>
-        <article id="contact-form" class="article-wrapper">
-          <header class="hidden">
-            <h3>Contact Form</h3>
-          </header>
-          <form
-            id="contact-us-form"
-            name="contact-us-form"
-            action="https://formdump.codeinstitute.net"
-            method="post"
-          >
-            <label for="name" class="hidden">Name</label>
-            <input
-              class="text-input"
-              id="name"
-              name="name"
-              type="text"
-              required
-              placeholder="Name"
-              autocomplete="on"
-            />
-            <label for="email" class="hidden">Email Address</label>
-            <input
-              class="text-input"
-              id="email"
-              name="email"
-              type="text"
-              required
-              placeholder="Email Address"
-              autocomplete="on"
-            />
-            <label for="question" class="hidden">Question</label>
-            <textarea
-              class="question-input"
-              id="question"
-              name="question"
-              required
-              placeholder="How can we help you?"
-            ></textarea>
-            <input class="submit" type="submit" value="Send it!" />
-          </form>
-        </article>
-        <article id="contact-information" class="article-wrapper">
-          <header>
-            <h4>Contact Information</h4>
-          </header>
-          <div id="address">
-            <h5>
-              <span><i class="fa-solid fa-location-dot"></i></span>Address
-            </h5>
-            <address>
-              16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
-            </address>
-          </div>
-          <div id="email-and-number">
-            <h5>
-              <span><i class="fa-solid fa-envelope"></i></span>Email Address
-            </h5>
-            <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
-            <h5>
-              <span><i class="fa-solid fa-phone"></i></span>Phone Number
-            </h5>
-            <a href="tel:+353831437489">+353831437489</a>
-          </div>
-          <div id="opening-hours">
-            <h5>
-              <span><i class="fa-regular fa-clock"></i></span>Opening Hours
-            </h5>
-          </div>
-        </article>
-        <article id="google-map" class="article-wrapper"></article>
+        <div class="section-inner-wrapper">
+          <article id="contact-form" class="article-wrapper">
+            <header class="hidden">
+              <h3>Contact Form</h3>
+            </header>
+            <form
+              id="contact-us-form"
+              name="contact-us-form"
+              action="https://formdump.codeinstitute.net"
+              method="post"
+            >
+              <label for="name" class="hidden">Name</label>
+              <input
+                class="text-input"
+                id="name"
+                name="name"
+                type="text"
+                required
+                placeholder="Name"
+                autocomplete="on"
+              />
+              <label for="email" class="hidden">Email Address</label>
+              <input
+                class="text-input"
+                id="email"
+                name="email"
+                type="text"
+                required
+                placeholder="Email Address"
+                autocomplete="on"
+              />
+              <label for="question" class="hidden">Question</label>
+              <textarea
+                class="question-input"
+                id="question"
+                name="question"
+                required
+                placeholder="How can we help you?"
+              ></textarea>
+              <input class="submit" type="submit" value="Send it!" />
+            </form>
+          </article>
+          <article id="contact-information" class="article-wrapper">
+            <header>
+              <h4>Contact Information</h4>
+            </header>
+            <div id="address">
+              <h5>
+                <span><i class="fa-solid fa-location-dot"></i></span>Address
+              </h5>
+              <address>
+                16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
+              </address>
+            </div>
+            <div id="email-and-number">
+              <h5>
+                <span><i class="fa-solid fa-envelope"></i></span>Email Address
+              </h5>
+              <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
+              <h5>
+                <span><i class="fa-solid fa-phone"></i></span>Phone Number
+              </h5>
+              <a href="tel:+353831437489">+353831437489</a>
+            </div>
+            <div id="opening-hours">
+              <h5>
+                <span><i class="fa-regular fa-clock"></i></span>Opening Hours
+              </h5>
+            </div>
+          </article>
+          <article id="google-map" class="article-wrapper"></article>
+        </div>
       </section>
     </main>
     <!-- Footer Section-->
