Add contact information and flexible styling to contact section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         </header>
       </section>
       <section id="contact-us" class="section-outer-wrapper">
-        <header>
+        <header class="hidden">
           <h2>Contact Us</h2>
         </header>
-        <div class="section-inner-wrapper">
+        <div class="row-1-wrap">
           <article id="contact-form" class="article-wrapper">
-            <header class="hidden">
+            <header>
               <h3>Contact Form</h3>
             </header>
             <form
@@ -123,33 +123,55 @@
           </article>
           <article id="contact-information" class="article-wrapper">
             <header>
-              <h4>Contact Information</h4>
+              <h3>Contact Information</h3>
             </header>
-            <div id="address">
-              <h5>
-                <span><i class="fa-solid fa-location-dot"></i></span>Address
-              </h5>
-              <address>
-                16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
-              </address>
-            </div>
-            <div id="email-and-number">
-              <h5>
-                <span><i class="fa-solid fa-envelope"></i></span>Email Address
-              </h5>
-              <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
-              <h5>
-                <span><i class="fa-solid fa-phone"></i></span>Phone Number
-              </h5>
-              <a href="tel:+353831437489">+353831437489</a>
+            <div class="row-1-wrap-address">
+              <div id="address">
+                <h5>
+                  <span><i class="fa-solid fa-location-dot"></i></span>Address
+                </h5>
+                <address>
+                  16 Grand Park,<br />Clare,<br />Co.Clare,<br />Ireland
+                </address>
+              </div>
+              <div id="email-and-number">
+                <div id="email-address">
+                  <h5>
+                    <span><i class="fa-solid fa-envelope"></i></span>Email
+                    Address
+                  </h5>
+                  <a href="mailto:contact@m-buildz.com">contact@m-buildz.com</a>
+                </div>
+                <div id="phone">
+                  <h5>
+                    <span><i class="fa-solid fa-phone"></i></span>Phone Number
+                  </h5>
+                  <a href="tel:+353831437489">+353831437489</a>
+                </div>
+              </div>
             </div>
             <div id="opening-hours">
               <h5>
                 <span><i class="fa-regular fa-clock"></i></span>Opening Hours
               </h5>
+              <p>
+                Monday: 10-18:00<br />
+                Tuesday: 10-18:00<br />
+                Wednesday 10-18:00<br />
+                Thursday: 10-18:00<br />
+                Friday: 10-18:00<br />
+                Saturday: Closed<br />
+                Sunday: Closed<br />
+              </p>
             </div>
           </article>
-          <article id="google-map" class="article-wrapper"></article>
+        </div>
+        <div id="row-2-wrap">
+          <article id="google-map" class="article-wrapper">
+            <header class="">
+              <h4>Google Maps</h4>
+            </header>
+          </article>
         </div>
       </section>
     </main>
