--- a/index.html
+++ b/index.html
@@ -169,8 +169,17 @@
         <div id="row-2-wrap">
           <article id="google-map" class="article-wrapper">
             <header class="">
-              <h4>Google Maps</h4>
+              <h3>Google Maps</h3>
             </header>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38559.7901836501!2d-9.055074383073954!3d52.84062132938008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b12cddf33d529%3A0xa00c7a997317320!2sEnnis%2C%20Co.%20Clare%2C%20Ireland!5e0!3m2!1sen!2sat!4v1705346120036!5m2!1sen!2sat"
+              width="100%"
+              height="100%"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </article>
         </div>
       </section>
