--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div id="row-2-wrap">
           <article id="google-map" class="article-wrapper">
-            <header class="">
+            <header class="hidden">
               <h3>Google Maps</h3>
             </header>
             <iframe
@@ -176,7 +176,7 @@
               width="100%"
               height="100%"
               style="border: 0"
-              allowfullscreen=""
+              allowfullscreen="false"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
