Add inital structure to card image and add title attribute to Google Maps iframe

--- a/index.html
+++ b/index.html
@@ -70,10 +70,17 @@
       <section id="cars">
         <header class="hidden">
           <h2>Cars</h2>
-          <div id="card-wrapper">
-            <article class="card"></article>
-          </div>
         </header>
+        <div id="card-wrapper">
+          <article class="card">
+            <figure class="card-image" id="car-1">
+              <div class="model" id="car-1-badges">
+                <img src="" alt="" />
+                <img src="" alt="" />
+              </div>
+            </figure>
+          </article>
+        </div>
       </section>
       <section id="contact-us" class="section-outer-wrapper">
         <header class="hidden">
@@ -179,6 +186,7 @@
               allowfullscreen="false"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
+              title="Google Maps"
             ></iframe>
           </article>
         </div>
