Add logos to initial card

--- a/index.html
+++ b/index.html
@@ -73,10 +73,18 @@
         </header>
         <div id="card-wrapper">
           <article class="card">
-            <figure class="card-image" id="car-1">
-              <div class="model" id="car-1-badges">
-                <img src="" alt="" />
-                <img src="" alt="" />
+            <figure class="card-image">
+              <div class="badges">
+                <img
+                  src="./assets/images/volkswagen-logo.png"
+                  height="25"
+                  alt="Volkswagen Logo"
+                />
+                <img
+                  src="./assets/images/golf-logo.png"
+                  height="20"
+                  alt="Golf Logo"
+                />
               </div>
             </figure>
           </article>
