--- a/index.html
+++ b/index.html
@@ -87,6 +87,47 @@
                 />
               </div>
             </figure>
+            <div class="car-information">
+              <div class="car-stats">
+                <h4>Volkswagen Golf</h4>
+                <ul class="car-stats-list" id="vw-golf-stats">
+                  <li>
+                    <img
+                      src="./assets/icons/top-speed.webp"
+                      height="20px"
+                      alt="Top Speed"
+                    />203km/h
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/weight.webp"
+                      height="20px"
+                      alt="Weight"
+                    />1980kg
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/engine-size.png"
+                      height="20px"
+                      alt="Engine Size"
+                    />2.5L Inline 6
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/power.webp"
+                      height="20px"
+                      alt="Power"
+                    />500PS
+                  </li>
+                </ul>
+              </div>
+              <div class="car-description">
+                <p>
+                  The VW Golf epitomizes luxury and performance, boasting a
+                  potent twin-turbo V8 engine...
+                </p>
+              </div>
+            </div>
           </article>
         </div>
       </section>
