--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </header>
         <div id="card-wrapper">
           <article class="card">
-            <figure class="card-image">
+            <figure class="card-image" id="vw-golf">
               <div class="badges">
                 <img
                   src="./assets/images/badges/volkswagen-logo.png"
@@ -90,7 +90,7 @@
             <div class="car-information">
               <div class="car-stats">
                 <h4>Volkswagen Golf</h4>
-                <ul class="car-stats-list" id="vw-golf-stats">
+                <ul class="car-stats-list">
                   <li>
                     <img
                       src="./assets/icons/top-speed.webp"
