--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
                   <li>
                     <img
                       src="./assets/icons/top-speed.webp"
-                      height="20px"
+                      height="20"
                       alt="Top Speed"
                     />203km/h
                   </li>
                   <li>
                     <img
                       src="./assets/icons/weight.webp"
-                      height="20px"
+                      height="20"
                       alt="Weight"
                     />1980kg
                   </li>
                   <li>
                     <img
                       src="./assets/icons/engine-size.png"
-                      height="20px"
+                      height="20"
                       alt="Engine Size"
                     />2.5L Inline 6
                   </li>
                   <li>
                     <img
                       src="./assets/icons/power.webp"
-                      height="20px"
+                      height="20"
                       alt="Power"
                     />500PS
                   </li>
@@ -229,10 +229,10 @@
             </header>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38559.7901836501!2d-9.055074383073954!3d52.84062132938008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b12cddf33d529%3A0xa00c7a997317320!2sEnnis%2C%20Co.%20Clare%2C%20Ireland!5e0!3m2!1sen!2sat!4v1705346120036!5m2!1sen!2sat"
-              width="100%"
-              height="100%"
+              width="1000"
+              height="400"
               style="border: 0"
-              allowfullscreen="false"
+              allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
               title="Google Maps"
