Fix site navigation header class

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!-- Page Header -->
-    <header class="page-header">
+    <header class="site-navigation">
       <!-- Logo -->
       <figure class="page-logo">
         <a href="index.html">
