--- a/index.html
+++ b/index.html
@@ -129,6 +129,63 @@
               </div>
             </div>
           </article>
+          <article class="card">
+            <figure class="card-image" id="bmw-m5">
+              <div class="badges">
+                <img
+                  src="./assets/images/badges/bmw-logo.webp"
+                  height="25"
+                  alt="BMW Logo"
+                />
+                <img
+                  src="./assets/images/badges/m5-logo.webp"
+                  height="20"
+                  alt="M5 Logo"
+                />
+              </div>
+            </figure>
+            <div class="car-information">
+              <div class="car-stats">
+                <h4>BMW M5</h4>
+                <ul class="car-stats-list">
+                  <li>
+                    <img
+                      src="./assets/icons/top-speed.webp"
+                      height="20"
+                      alt="Top Speed"
+                    />225km/h
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/weight.webp"
+                      height="20"
+                      alt="Weight"
+                    />2160kg
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/engine-size.png"
+                      height="20"
+                      alt="Engine Size"
+                    />3.5L V8
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/power.webp"
+                      height="20"
+                      alt="Power"
+                    />600PS
+                  </li>
+                </ul>
+              </div>
+              <div class="car-description">
+                <p>
+                  The BMW M5 epitomizes luxury and performance, boasting a
+                  potent twin-turbo V8 engine...
+                </p>
+              </div>
+            </div>
+          </article>
         </div>
       </section>
       <section id="contact-us" class="section-outer-wrapper">
