--- a/index.html
+++ b/index.html
@@ -243,6 +243,63 @@
               </div>
             </div>
           </article>
+          <article class="card">
+            <figure class="card-image" id="wrx-sti">
+              <div class="badges">
+                <img
+                  src="./assets/images/badges/subaru-logo-100px.webp"
+                  height="25"
+                  alt="Toyota Logo"
+                />
+                <img
+                  src="./assets/images/badges/sti-logo.webp"
+                  height="20"
+                  alt="Altezza Logo"
+                />
+              </div>
+            </figure>
+            <div class="car-information">
+              <div class="car-stats">
+                <h4>WRX STI</h4>
+                <ul class="car-stats-list">
+                  <li>
+                    <img
+                      src="./assets/icons/top-speed.webp"
+                      height="20"
+                      alt="Top Speed"
+                    />220km/h
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/weight.webp"
+                      height="20"
+                      alt="Weight"
+                    />2150kg
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/engine-size.png"
+                      height="20"
+                      alt="Engine Size"
+                    />2.2L Inline 6
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/power.webp"
+                      height="20"
+                      alt="Power"
+                    />360PS
+                  </li>
+                </ul>
+              </div>
+              <div class="car-description">
+                <p>
+                  The WRX STI epitomizes luxury and performance, boasting a
+                  potent twin-turbo V8 engine...
+                </p>
+              </div>
+            </div>
+          </article>
         </div>
       </section>
       <section id="contact-us" class="section-outer-wrapper">
