Add Toyota Altezza card to index.html and style

--- a/index.html
+++ b/index.html
@@ -244,6 +244,63 @@
             </div>
           </article>
           <article class="card">
+            <figure class="card-image" id="toyota-altezza">
+              <div class="badges">
+                <img
+                  src="./assets/images/badges/toyota-logo.webp"
+                  height="25"
+                  alt="Toyota Logo"
+                />
+                <img
+                  src="./assets/images/badges/altezza-logo.webp"
+                  height="10"
+                  alt="Altezza Logo"
+                />
+              </div>
+            </figure>
+            <div class="car-information">
+              <div class="car-stats">
+                <h4>Toyota Altezza</h4>
+                <ul class="car-stats-list">
+                  <li>
+                    <img
+                      src="./assets/icons/top-speed.webp"
+                      height="20"
+                      alt="Top Speed"
+                    />190km/h
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/weight.webp"
+                      height="20"
+                      alt="Weight"
+                    />2100kg
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/engine-size.png"
+                      height="20"
+                      alt="Engine Size"
+                    />2.2L Inline 6
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/power.webp"
+                      height="20"
+                      alt="Power"
+                    />360PS
+                  </li>
+                </ul>
+              </div>
+              <div class="car-description">
+                <p>
+                  The Toyota Altezza epitomizes luxury and performance, boasting
+                  a potent twin-turbo V8 engine...
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="card">
             <figure class="card-image" id="wrx-sti">
               <div class="badges">
                 <img
