--- a/index.html
+++ b/index.html
@@ -187,6 +187,63 @@
             </div>
           </article>
           <article class="card">
+            <figure class="card-image" id="honda-civic">
+              <div class="badges">
+                <img
+                  src="./assets/images/badges/honda-logo.webp"
+                  height="25"
+                  alt="Honda Logo"
+                />
+                <img
+                  src="./assets/images/badges/civic-logo.webp"
+                  height="15"
+                  alt="Civic Logo"
+                />
+              </div>
+            </figure>
+            <div class="car-information">
+              <div class="car-stats">
+                <h4>Honda Civic</h4>
+                <ul class="car-stats-list">
+                  <li>
+                    <img
+                      src="./assets/icons/top-speed.webp"
+                      height="20"
+                      alt="Top Speed"
+                    />170km/h
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/weight.webp"
+                      height="20"
+                      alt="Weight"
+                    />1800kg
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/engine-size.png"
+                      height="20"
+                      alt="Engine Size"
+                    />1.8L Inline 4
+                  </li>
+                  <li>
+                    <img
+                      src="./assets/icons/power.webp"
+                      height="20"
+                      alt="Power"
+                    />290PS
+                  </li>
+                </ul>
+              </div>
+              <div class="car-description">
+                <p>
+                  The Honda Civic epitomizes luxury and performance, boasting a
+                  potent twin-turbo V8 engine...
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="card">
             <figure class="card-image" id="subaru-sti">
               <div class="badges">
                 <img
