Refactor opening hours paragraph into a table and style

--- a/index.html
+++ b/index.html
@@ -495,15 +495,46 @@
               <h5>
                 <span><i class="fa-regular fa-clock"></i></span>Opening Hours
               </h5>
-              <p>
-                Monday: 10-18:00<br />
-                Tuesday: 10-18:00<br />
-                Wednesday 10-18:00<br />
-                Thursday: 10-18:00<br />
-                Friday: 10-18:00<br />
-                Saturday: Closed<br />
-                Sunday: Closed<br />
-              </p>
+              <table class="timetable">
+                <tr>
+                  <td>Monday:</td>
+                  <td>10am</td>
+                  <td class="dash">-</td>
+                  <td>6pm</td>
+                </tr>
+                <tr>
+                  <td>Tuesday:</td>
+                  <td>10am</td>
+                  <td class="dash">-</td>
+                  <td>6pm</td>
+                </tr>
+                <tr>
+                  <td>Wednesday:</td>
+                  <td>10am</td>
+                  <td class="dash">-</td>
+                  <td>6pm</td>
+                </tr>
+                <tr>
+                  <td>Thursday:</td>
+                  <td>10am</td>
+                  <td class="dash">-</td>
+                  <td>6pm</td>
+                </tr>
+                <tr>
+                  <td>Friday:</td>
+                  <td>10am</td>
+                  <td class="dash">-</td>
+                  <td>6pm</td>
+                </tr>
+                <tr>
+                  <td>Saturday:</td>
+                  <td>Closed</td>
+                </tr>
+                <tr>
+                  <td>Sunday:</td>
+                  <td>Closed</td>
+                </tr>
+              </table>
             </div>
           </article>
         </div>
